force-app/main/default/objects/Payroll_Confirmation__c/Payroll_Confirmation__c.object-meta.xml
<CustomObject>
    <description>Tracks confirmation records received from payroll systems after commission exports are processed.</description>
    <label>Payroll Confirmation</label>
    <nameField>
        <displayFormat>PC-{00000}</displayFormat>
        <label>Payroll Confirmation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payroll Confirmations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>