force-app/main/default/objects/Payroll_Confirmation__c/fields/Confirmation_File__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_File__c</fullName>
    <description>ContentDocument link</description>
    <label>Confirmation File</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>