force-app/main/default/objects/Payroll_Confirmation__c/fields/Confirmation_Source__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Source__c</fullName>
    <description>How the payroll confirmation was received.</description>
    <label>Confirmation Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>API_Callback</fullName>
            </value>
            <value>
                <fullName>File_Upload</fullName>
            </value>
            <value>
                <fullName>Manual_Confirm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>