force-app/main/default/objects/Payroll_Confirmation__c/fields/Confirmed_By__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_By__c</fullName>
    <description>User who confirmed the payroll processing.</description>
    <label>Confirmed By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Payroll Confirmations</relationshipLabel>
    <relationshipName>Payroll_Confirmations</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>