force-app/main/default/objects/Payroll_Confirmation__c/fields/Confirmed_On__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_On__c</fullName>
    <description>Date and time the payroll confirmation was received.</description>
    <label>Confirmed On</label>
    <type>DateTime</type>
</CustomField>