force-app/main/default/objects/Payroll_Confirmation__c/fields/External_Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Batch_Id__c</fullName>
    <description>External batch identifier from the payroll system.</description>
    <label>External Batch Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>