force-app/main/default/objects/Payroll_Confirmation__c/fields/Failure_Details__c.field-meta.xml
<CustomField>
    <fullName>Failure_Details__c</fullName>
    <description>Details of any failures encountered during payroll processing.</description>
    <label>Failure Details</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>