force-app/main/default/objects/Payroll_Confirmation__c/fields/Payroll_Export__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Export__c</fullName>
    <description>Reference to the payroll export this confirmation relates to.</description>
    <label>Payroll Export</label>
    <type>Lookup</type>
    <referenceTo>Payroll_Export__c</referenceTo>
    <relationshipLabel>Confirmations</relationshipLabel>
    <relationshipName>Confirmations</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>