force-app/main/default/objects/Payroll_Confirmation__c/fields/Records_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Records_Confirmed__c</fullName>
    <description>Number of records successfully confirmed by payroll.</description>
    <label>Records Confirmed</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>