force-app/main/default/objects/Payroll_Confirmation__c/fields/Records_Failed__c.field-meta.xml
<CustomField>
    <fullName>Records_Failed__c</fullName>
    <description>Number of records that failed payroll processing.</description>
    <label>Records Failed</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>