force-app/main/default/objects/Payroll_Confirmation__c/fields/Total_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Total_Confirmed__c</fullName>
    <description>Total monetary amount confirmed by payroll.</description>
    <label>Total Confirmed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>